WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91437
Fix spelling of EnforceIFrameAllowFullScreenRequirement and ExemptIFrameAllowFullScreenRequirement.
https://bugs.webkit.org/show_bug.cgi?id=91437
Summary
Fix spelling of EnforceIFrameAllowFullScreenRequirement and ExemptIFrameAllow...
Vincent Scheib
Reported
2012-07-16 15:51:59 PDT
Fix spelling of EnforceIFrameAllowFullScreenRequirement and ExemptIFrameAllowFullScreenRequirement.
Attachments
Patch
(5.52 KB, patch)
2012-07-16 15:57 PDT
,
Vincent Scheib
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vincent Scheib
Comment 1
2012-07-16 15:57:19 PDT
Created
attachment 152631
[details]
Patch
Adrienne Walker
Comment 2
2012-07-16 16:21:01 PDT
Comment on
attachment 152631
[details]
Patch R=me. Also, I'm a little ಠ_ಠ at whoever wrote or reviewed that in the first place.
WebKit Review Bot
Comment 3
2012-07-16 17:53:10 PDT
Comment on
attachment 152631
[details]
Patch Clearing flags on attachment: 152631 Committed
r122787
: <
http://trac.webkit.org/changeset/122787
>
WebKit Review Bot
Comment 4
2012-07-16 17:53:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug