Fix spelling of EnforceIFrameAllowFullScreenRequirement and ExemptIFrameAllowFullScreenRequirement. https://bugs.webkit.org/show_bug.cgi?id=91437

Reviewed by Adrienne Walker.

Document contained spelling errors of 'FulScreen' instead of 'FullScreen'
for the FullScreenCheckType enumeration.

No test changes needed.

* dom/Document.cpp:
(WebCore::Document::requestFullScreenForElement):
* dom/Document.h:
* dom/Element.cpp:
(WebCore::Element::webkitRequestFullscreen):
(WebCore::Element::webkitRequestFullScreen):
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::enterFullscreen):
* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlFullscreenButtonElement::defaultEventHandler):


Canonical link: https://commits.webkit.org/109255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122787 268f45cc-cd09-0410-ab3c-d52691b4dbfc